# Socratic-training

./: .gitignore  README.md  curriculum.txt  pyproject.toml
configs/: default.yaml  workstation.toml
src/socratic_training/: __init__.py  buffer.py  cli.py  config.py  curriculum.py  judge.py  memory.py  model_manager.py  pipeline.py  preflight.py  prompts.py  red.py  socratic.py  types.py  utils.py  validators.py
src/socratic_training/buffers/: hard_buffer.py
src/socratic_training/judge/: rubric.py  scoring.py
src/socratic_training/models/: loader.py
src/socratic_training/pipeline/: bucket_select.py  iteration.py  loop.py
src/socratic_training/red/: debug.py  generator.py  prompts.py  schema.py  train_dpo.py  train_sft.py
src/socratic_training/rl/: grpo.py
src/socratic_training/socratic/: hints.py  prompts.py
src/socratic_training/utils/: chat.py  code.py  events.py  io.py  json.py
src/socratic_training/validation/: sandbox.py  task_validator.py
tests/: test_curriculum.py  test_memory.py  test_sft-model.py  test_validation.py
