[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "socratic-training"
version = "0.1.0"
description = "Single-node Socratic RL/GRPO training pipeline with curriculum-constrained hard-example generation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]

dependencies = [
  "pydantic>=1.10",
  "PyYAML>=6.0",
  "rich>=13.7",
  "tqdm>=4.66",
  "numpy>=1.26",
]

[project.optional-dependencies]
gpu = [
  "torch",
  "transformers>=4.41",
  "accelerate>=0.30",
  "peft>=0.11",
  "bitsandbytes>=0.43",
  "safetensors>=0.4",
  "datasets>=2.18",
]
train = [
  "trl>=0.9",
]
dev = [
  "pytest>=8.0",
]

[project.scripts]
socratic-train = "socratic_training.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
